ConnexoProject/force-app/main/default/objects/Public_Groups__c/Public_Groups__c.object-meta.xml
<CustomObject>
    <label>Public Groups</label>
    <nameField>
        <label>Public Groups Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PublicGroups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>