ConnexoProject/force-app/main/default/objects/Public_Groups__c/fields/Public_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Public_Group_Name__c</fullName>
    <label>Public Group Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andelyn QA</fullName>
            </value>
            <value>
                <fullName>General User</fullName>
            </value>
            <value>
                <fullName>Area Management</fullName>
            </value>
            <value>
                <fullName>Audit Quality</fullName>
            </value>
            <value>
                <fullName>Auditee</fullName>
            </value>
            <value>
                <fullName>Auditors</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>CAPA Initiator</fullName>
            </value>
            <value>
                <fullName>CAPA Owner</fullName>
            </value>
            <value>
                <fullName>CAPA Quality</fullName>
            </value>
            <value>
                <fullName>Change Control Owner</fullName>
            </value>
            <value>
                <fullName>Change Control QA</fullName>
            </value>
            <value>
                <fullName>Change Initiator</fullName>
            </value>
            <value>
                <fullName>Complaint Entry</fullName>
            </value>
            <value>
                <fullName>Complaint Investigator</fullName>
            </value>
            <value>
                <fullName>Complaint Review and Approval</fullName>
            </value>
            <value>
                <fullName>Cross Functional Team</fullName>
            </value>
            <value>
                <fullName>DMS Viewer</fullName>
            </value>
            <value>
                <fullName>Investigation Owner</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Quality Event Owner</fullName>
            </value>
            <value>
                <fullName>Requestor</fullName>
            </value>
            <value>
                <fullName>Reviewer</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>