ConnexoProject/force-app/main/default/objects/Public_Groups__c/fields/Related_User__c.field-meta.xml
<CustomField>
    <fullName>Related_User__c</fullName>
    <label>Related User</label>
    <length>30</length>
    <type>Text</type>
</CustomField>